--- a/index.html
+++ b/index.html
@@ -5,95 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator | atsuchak</title>
-    <style>
-        * {
-            box-sizing: border-box;
-            margin: 0;
-            padding: 0;
-        }
-
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            background: linear-gradient(135deg, #1e3c72, #2a5298);
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        }
-
-        #Calculator {
-            background-color: #121212;
-            border-radius: 20px;
-            box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
-            padding: 20px;
-            width: 100%;
-            max-width: 400px;
-        }
-
-        #display {
-            width: 100%;
-            padding: 1.2rem;
-            font-size: 2.2rem;
-            text-align: right;
-            background-color: #1f1f1f;
-            border: none;
-            border-radius: 10px;
-            color: #f2f2f2;
-            margin-bottom: 20px;
-        }
-
-        #keys {
-            display: grid;
-            grid-template-columns: repeat(4, 1fr);
-            gap: 15px;
-        }
-
-        button {
-            padding: 20px;
-            font-size: 1.6rem;
-            border-radius: 12px;
-            border: none;
-            background-color: #292929;
-            color: #ffffff;
-            font-weight: bold;
-            cursor: pointer;
-            transition: all 0.2s ease;
-        }
-
-        button:hover {
-            background-color: #3a3a3a;
-        }
-
-        button:active {
-            transform: scale(0.97);
-            background-color: #4a4a4a;
-        }
-
-        .operator {
-            background-color: #ff9500;
-            color: white;
-        }
-
-        .operator:hover {
-            background-color: #ffa733;
-        }
-
-        .special {
-            background-color: #007aff;
-            color: white;
-        }
-
-        @media (max-width: 500px) {
-            button {
-                padding: 15px;
-                font-size: 1.4rem;
-            }
-
-            #display {
-                font-size: 1.8rem;
-            }
-        }
-    </style>
+    
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -127,65 +40,8 @@
         </div>
     </div>
 
-    <script>
-        const display = document.getElementById("display");
-        let memoryValue = 0;
+    <script src="script.js"></script>
 
-        function appendToDisplay(input) {
-            if (input === 'M+') {
-                memoryPlus();
-            } else {
-                display.value += input;
-            }
-        }
-
-        function memoryPlus() {
-            const current = parseFloat(display.value);
-            if (!isNaN(current)) {
-                memoryValue += current;
-                display.value = '';
-            } else {
-                display.value = "ERROR";
-            }
-        }
-
-        function memoryRecall() {
-            display.value += memoryValue.toString();
-        }
-
-        function clearDisplay() {
-            display.value = "";
-        }
-
-        function calculate() {
-            try {
-                display.value = eval(display.value);
-            } catch (error) {
-                display.value = "ERROR";
-            }
-        }
-
-        // Keyboard support
-        document.addEventListener("keydown", function (event) {
-            const key = event.key;
-
-            if (!isNaN(key) || ['+', '-', '*', '/', '.', '%'].includes(key)) {
-                appendToDisplay(key);
-            } else if (key === 'Enter') {
-                event.preventDefault(); // Prevent form submission
-                calculate();
-            } else if (key === 'Backspace') {
-                display.value = display.value.slice(0, -1);
-            } else if (key.toLowerCase() === 'c') {
-                clearDisplay();
-            } else if (key.toLowerCase() === 'm') {
-                memoryPlus();
-            } else if (key.toLowerCase() === 'r') {
-                memoryRecall();
-            }
-        });
-
-    </script>
 </body>
 
 </html>
